--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
        More info: h5bp.com/b/378 -->
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 
-  <title></title>
+  <title>i need that hosting</title>
   <meta name="description" content="">
   <meta name="author" content="">
 
@@ -33,7 +33,7 @@
 
 <body>
   <header>
-
+  hello there sweetie
   </header>
   <div role="main">
 
