--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
   <meta charset="utf-8">
 
   <!-- Use the .htaccess and remove these lines to avoid edge case issues.
-       More info: h5bp.com/b/378 -->
-  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+       More info: h5bp.com/b/378 
+  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">-->
 
   <title>i need that hosting</title>
   <meta name="description" content="">
